<resources>
    <string name="app_name">Tic Tac</string>
    <string name="background_image">background</string>
    <string name="logo" />
    <string name="name_image">image</string>
    <string name="start">Touch To Start</string>
    <string name="box">box</string>
    <string name="blank"> </string>
    <string name="game_result">Game Result</string>
    <string name="exit">Exit</string>
    <string name="play_again">Play Again</string>
</resources>