<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8sp"
            android:layout_marginTop="8sp"
            android:layout_marginRight="8sp"
            android:background="#91D8E1"
            android:fontFamily="@font/roboto"
            android:text="@string/game_result"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/winner_text"
            android:layout_width="match_parent"
            android:layout_height="111dp"
            android:layout_marginLeft="8sp"
            android:layout_marginRight="8sp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8sp"
                android:layout_marginRight="8sp"
                android:layout_marginBottom="8sp"
                android:layout_weight="1"
                android:backgroundTint="@color/my_red"
                android:text="@string/exit"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/playagain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8sp"
                android:layout_marginRight="8sp"
                android:layout_marginBottom="8sp"
                android:layout_weight="1"
                android:backgroundTint="@color/my_green"
                android:text="@string/play_again"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>