<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <ImageView
        android:id="@+id/background3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/screenshot1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="139dp"
        android:layout_height="141dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998"
        app:srcCompat="@drawable/tictac" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="209dp"
        android:layout_height="78dp"
        android:contentDescription="@string/name_image"
        app:layout_constraintBottom_toBottomOf="@+id/background3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23000002"
        app:srcCompat="@drawable/tictac1" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="319sp"
        android:layout_height="319sp"
        android:contentDescription="@string/box"
        app:layout_constraintBottom_toBottomOf="@+id/background3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:srcCompat="@drawable/cross2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="319sp"
        android:layout_height="319sp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74">

        <TableLayout
            android:layout_width="319sp"
            android:layout_height="319sp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="42pt"
                    android:layout_marginLeft="7sp"
                    android:layout_marginTop="4sp"
                    android:layout_marginRight="4sp"
                    android:layout_marginBottom="4sp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:onClick="buclick"
                    android:textSize="40sp"
                    app:iconTintMode="add"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="42pt"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="4sp"
                    android:layout_marginBottom="4sp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:onClick="buclick"
                    android:textSize="40sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="42pt"
                    android:layout_marginLeft="8sp"
                    android:layout_marginTop="4sp"
                    android:layout_marginRight="6sp"
                    android:layout_marginBottom="4sp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:onClick="buclick"
                    android:textSize="40sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="42pt"
                    android:layout_marginLeft="7sp"
                    android:layout_marginTop="4sp"
                    android:layout_marginRight="4sp"
                    android:layout_marginBottom="4sp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:onClick="buclick"
                    android:textSize="40sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="42pt"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="4sp"
                    android:layout_marginBottom="4sp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:onClick="buclick"
                    android:textSize="40sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="42pt"
                    android:layout_marginLeft="8sp"
                    android:layout_marginTop="4sp"
                    android:layout_marginRight="6sp"
                    android:layout_marginBottom="4sp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:onClick="buclick"
                    android:textSize="40sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="42pt"
                    android:layout_marginLeft="7sp"
                    android:layout_marginTop="4sp"
                    android:layout_marginRight="4sp"
                    android:layout_marginBottom="4sp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:onClick="buclick"
                    android:textSize="40sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="42pt"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="4sp"
                    android:layout_marginBottom="4sp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:onClick="buclick"
                    android:textSize="40sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button9"
                    android:layout_width="wrap_content"
                    android:layout_height="42pt"
                    android:layout_marginLeft="8sp"
                    android:layout_marginTop="4sp"
                    android:layout_marginRight="6sp"
                    android:layout_marginBottom="4sp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:onClick="buclick"
                    android:textSize="40sp" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>